# np-clinical-trials

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  run_fpadmet.py
data/output/: pathway_np_classifier_approved.tsv  superclass_np_classifier_approved.tsv
notebooks/: README.md
notebooks/clinical_trials/: 1_grounding_clinical_trials.ipynb  2_clinical_trials_np_likeness.ipynb  3_clinical_trials_dump_software.ipynb  np_likeness_utils.py
notebooks/patents/: patent_cmp_nplikeliness.ipynb
notebooks/toxicity/: curated_dataset_fpadmet.ipynb  fpadmet.ipynb  fpadmet_credibility_distribution.ipynb  ochem_analysis.ipynb  ochem_analysis.py  run_fpadmet.py  toxicity_analysis.ipynb
support/: DDS-50.smi  OCHEM_records.csv
