[tool.poetry]
name = "np-clinical-trial"
version = "0.0.1"
description = ""
authors = []
include = ["pyproject.toml"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "2.1.0"
scipy = "^1.8.0"
numpy = "1.23.4"
rdkit = "^2022.09.1"
seaborn = "^0.11.0"
statannotations = "^0.5.0"
ipython = "^8.17.2"
ipykernel = "^6.26.0"
s3fs = "^2023.10.0"
awswrangler = "^3.4.2"
pyarrow = "^14.0.1"
matplotlib-venn = "^0.11.9"
openai = "^1.3.8"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
ipykernel = "^6.25.1"
black = "^24.3.0"
ruff = "^0.0.286"

[tool.poetry.group.viz]
optional = true

[tool.poetry.group.viz.dependencies]
plotly = "^5.15.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[tool.poetry.scripts]
manifold-of-life = "np-clinical-trials.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests that run against AWS (deselect with '-m \"not e2e\"')",
]
